# Elements

./: .clang-format  .editorconfig  .gitignore  .jenkinsFile  .mailmap  .travis.yml  CHANGELOG.md  CMakeLists.txt  ChangeLog  Makefile  README.md  index.rst  toolchain.cmake
ElementsExamples/: CMakeLists.txt
ElementsExamples/ElementsExamples/: CRectangle.pxd  ClassExample.h  ClassExample2.h  DataSourceUser.h  ElementsProgramExample.h  ExampleClass1.h  ExampleClass2.h  Inversion.h  ModuleInfo.h  PiCalculator.h  Rect.pxd  Rectangle.h  SwigClassExample.h  SwigExample.i  TemplatedDataSourceUser.h  TheClass.h  TheFunction.h  UnitTestExample.h  callBackExample.h  crashingFunction.h  functionExample.h  functionExample2.h  printProject.h  util.h
ElementsExamples/ElementsExamples/_impl/: TemplatedDataSourceUser.icpp  TemplatedDataSourceUser.tpp
ElementsExamples/auxdir/ElementsExamples/: phz_cat.fits
ElementsExamples/conf/: CppProgramExample.conf  ElementsProgramExample.cfg  ElementsProgramExample.conf
ElementsExamples/conf/ElementsExamples/: ElementsProgramExample.conf  PythonProgramExample.conf
ElementsExamples/doc/: ElementsExamples.dox  b.rst  doc_module.rst
ElementsExamples/python/ElementsExamples/: PyBind11ProgramExample.py  PythonModuleExample.py  PythonProgramExample.py  PythonTestProgramExample.py  SpawnExample.py  SwigProgramExample.py  __init__.py
ElementsExamples/scripts/: OptionPrecedence_test  ScriptThatChecksFile_test  ScriptThatFails_test  ScriptThatGivesError_test  ScriptThatGivesOutput  ScriptThatGivesOutput_test  ScriptThatGivesStdError_test  ScriptThatSucceeds_test  UnrecognizedOption_test
ElementsExamples/src/CProgram/: cutout.c  util.c  util.h
ElementsExamples/src/Lib/: ClassExample.cpp  ElementsProgramExample.cpp  ExampleClass1.cpp  ExampleClass2.cpp  ModuleInfo.cpp  TheClass.cpp  TheFunction.cpp
ElementsExamples/src/Program/: ElementsProgramExample.cpp  ElementsProgramExampleMain.cpp  ProgramExample.cpp  ProgramExampleWithArguments.cpp  SimpleProgramExample.cpp  TheMain.cpp
ElementsExamples/src/lib/: ClassExample.cpp  DataSourceUser.cpp  Inversion.cpp  ModuleInfo.cpp  PiCalculator.cpp  Rectangle.cpp  SwigClassExample.cpp  UnitTestExample.cpp  callBackExample.cpp  crashingFunction.cpp  functionExample.cpp
ElementsExamples/src/program/: AnotherSimpleProgram.cpp  AnotherSimpleProgramExample.cpp  BackTrace.cpp  BackTraceExample.cpp  CCfits.cpp  CCfitsExample.cpp  Cfitsio.cpp  CfitsioExample.cpp  Eigen.cpp  EigenExample.cpp  ExtProgram.cpp  ExtProgramExample.cpp  Fftw.cpp  FftwExample.cpp  FloatPrecision.cpp  FloatPrecisionExample.cpp  GnuAstro.cpp  GnuAstroExample.cpp  Gsl.cpp  GslExample.cpp  Healpix.cpp  HealpixExample.cpp  OpenMP.cpp  OpenMPExample.cpp  OtherProgramExample.cpp  Program.cpp  ProgramExample.cpp  ProgramExampleWithArguments.cpp  ProgramWithArguments.cpp  SimpleProgram.cpp  SimpleProgramExample.cpp  Wcs.cpp  WcsExample.cpp  Xerces.cpp  XercesExample.cpp
ElementsExamples/src/pybind11/: callback.cpp
ElementsExamples/tests/python/: ClassExample_test.py  CppProgramTest.py  CythonExample_test.py  PiCalculator_test.py  ProgramTest.py  SwigExample_test.py
ElementsExamples/tests/src/: ClassExample_test.cpp  TestMain.cpp  TheClass_test.cpp  Tolerance.h
ElementsKernel/: CMakeLists.txt  index.rst
ElementsKernel/ElementsKernel/: Attribute.h  Auxiliary.h  Configuration.h  Deprecated.h  DirSearchPath.h  ElementsException.h  ElementsLogging.h  ElementsLogging2.h  ElementsProgram.h  EnableGMock.h  Environment.h  EuclidException.h  Exception.h  Exit.h  Export.h  FileLocator.h  FuncPtrCast.h  Integer.h  Kernel.h  Likely.h  Logging.h  Main.h  MathConstants.h  Memory.h  Module.h  ModuleInfo.h  NoGlibDebug.h  Number.h  Off64Type.h  Path.h  PathResolver.h  PathSearch.h  PhysConstants.h  Program.h  ProgramHeaders.h  ProgramManager.h  Project.h  Real.h  SimpleProgram.h  Sleep.h  (+16 more)
ElementsKernel/ElementsKernel/_impl/: Auxiliary.icpp  Auxiliary.tpp  Configuration.icpp  Configuration.tpp  Path.icpp  Path.tpp  PathSearch.icpp  PathSearch.tpp  Storage.icpp  Storage.tpp  Time.icpp
ElementsKernel/auxdir/: CMakeList.txt.in  CMakeLists.txt.in  CMakeLists.txt.mod.in
ElementsKernel/auxdir/templates/: CMakeLists.txt.in  CMakeLists.txt.mod.in  ClassName_template.cpp  ClassName_template.cpp.in  ClassName_template.h  ClassName_template.h.in  Euclid_cpp_license.txt  Euclid_python_license.txt  Makefile.in  Program_template.cpp  Program_template.cpp.in  PythonModule_template.py.in  PythonProgram_template.py  PythonProgram_template.py.in  PythonTest_template.py  PythonTest_template.py.in  UnitTestFile_template.cpp  UnitTestFile_template.cpp.in
ElementsKernel/dict/: dictionary.h  dictionary.xml
ElementsKernel/doc/: ElementsKernel.dox  doc_module.rst
ElementsKernel/python/ElementsKernel/: AddCppClass.py  AddCppProgram.py  AddModule.py  AddPythonModule.py  AddPythonProgram.py  AddScript.py  Auxiliary.py  Configuration.py  Constants.py  CreateProject.py  ElementsAddCppClass.py  ElementsAddCppProgram.py  ElementsAddModule.py  ElementsAddPythonModule.py  ElementsAddPythonProgram.py  ElementsModule.py  ElementsProject.py  ElementsProjectCommonRoutines.py  Environment.py  Exit.py  GaudiHandles.py  GetElementsFiles.py  GetFiles.py  Logging.py  NameCheck.py  ParseCmakeLists.py  ParseCmakeListsMacros.py  Path.py  PhysicalConstants.py  ProcessJobOptions.py  Program.py  Project.py  ProjectCommonRoutines.py  RemoveCppClass.py  RemoveCppProgram.py  (+9 more)
ElementsKernel/scripts/: HEADVersionProject_test  addCppClass_test  addCppProgram_test  addElementsModule_test  addPythonModule_test  addPythonProgram_test  addScript_test  checkElementsProjectsTree_test  checkProjectDependencyFailure_test  cmakeOverride_test  createCommonStructure_test  createDependentElementsProjects_test  createElementsModule_test  createElementsProject_test  make_patch.py  missingElementsProjectVersion_test  patchVersionProject_test  root_map_dump.py  squeezedInstall_test
ElementsServices/: CMakeLists.txt
ElementsServices/ElementsServices/: DataSync.h
ElementsServices/doc/: ElementsServices.dox
(+375 files in other folders)
